--- a/SocialNetworking/Base.lproj/Main.storyboard
+++ b/SocialNetworking/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SocialNetworking" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="SignInViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="SocialNetworking" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -159,7 +159,7 @@
         <!--Home View Controller-->
         <scene sceneID="lMw-RP-ypy">
             <objects>
-                <viewController id="tQo-gZ-t6E" customClass="HomeViewController" customModule="SocialNetworking" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HomeViewController" id="tQo-gZ-t6E" customClass="HomeViewController" customModule="SocialNetworking" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="wkX-QB-V3S">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -195,7 +195,7 @@
         <!--Add Post View Controller-->
         <scene sceneID="Q3c-la-p4Q">
             <objects>
-                <viewController storyboardIdentifier="AddPostVC" id="kXr-5b-7nV" customClass="AddPostViewController" customModule="SocialNetworking" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AddPostViewController" id="kXr-5b-7nV" customClass="AddPostViewController" customModule="SocialNetworking" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="HcC-5W-MRg">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -254,15 +254,15 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SIO-y4-hSZ">
-                                <rect key="frame" x="15" y="323" width="345" height="295"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SIO-y4-hSZ">
+                                <rect key="frame" x="15" y="323" width="345" height="336"/>
                                 <subviews>
-                                    <view alpha="0.65000000000000002" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0tF-NN-88B">
-                                        <rect key="frame" x="0.0" y="0.0" width="345" height="295"/>
+                                    <view alpha="0.65000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0tF-NN-88B">
+                                        <rect key="frame" x="0.0" y="0.0" width="345" height="336"/>
                                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </view>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" text="#bestSelfie" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Hp8-4m-aOK">
-                                        <rect key="frame" x="0.0" y="0.0" width="345" height="295"/>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="#bestSelfie" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Hp8-4m-aOK">
+                                        <rect key="frame" x="0.0" y="0.0" width="345" height="336"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -270,14 +270,14 @@
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="Hp8-4m-aOK" firstAttribute="top" secondItem="SIO-y4-hSZ" secondAttribute="top" id="4HZ-1K-8Zm"/>
-                                    <constraint firstItem="0tF-NN-88B" firstAttribute="top" secondItem="SIO-y4-hSZ" secondAttribute="top" id="4Yy-yp-vsO"/>
-                                    <constraint firstItem="0tF-NN-88B" firstAttribute="leading" secondItem="SIO-y4-hSZ" secondAttribute="leading" id="LoR-mU-beW"/>
-                                    <constraint firstAttribute="bottom" secondItem="0tF-NN-88B" secondAttribute="bottom" id="RPt-xk-8mX"/>
-                                    <constraint firstAttribute="bottom" secondItem="Hp8-4m-aOK" secondAttribute="bottom" id="fR5-4y-0RC"/>
-                                    <constraint firstItem="Hp8-4m-aOK" firstAttribute="leading" secondItem="SIO-y4-hSZ" secondAttribute="leading" id="hNw-kd-eKr"/>
-                                    <constraint firstAttribute="trailing" secondItem="Hp8-4m-aOK" secondAttribute="trailing" id="wzx-N2-on3"/>
-                                    <constraint firstAttribute="trailing" secondItem="0tF-NN-88B" secondAttribute="trailing" id="yb6-Wi-eIp"/>
+                                    <constraint firstAttribute="trailing" secondItem="Hp8-4m-aOK" secondAttribute="trailing" id="0gz-kM-gsK"/>
+                                    <constraint firstItem="Hp8-4m-aOK" firstAttribute="top" secondItem="SIO-y4-hSZ" secondAttribute="top" id="G6a-qI-Oa3"/>
+                                    <constraint firstItem="0tF-NN-88B" firstAttribute="leading" secondItem="SIO-y4-hSZ" secondAttribute="leading" id="H6O-oF-nOh"/>
+                                    <constraint firstAttribute="bottom" secondItem="0tF-NN-88B" secondAttribute="bottom" id="R0J-Qj-HIg"/>
+                                    <constraint firstAttribute="trailing" secondItem="0tF-NN-88B" secondAttribute="trailing" id="VRL-jW-7Df"/>
+                                    <constraint firstAttribute="bottom" secondItem="Hp8-4m-aOK" secondAttribute="bottom" id="l11-5S-jYI"/>
+                                    <constraint firstItem="0tF-NN-88B" firstAttribute="top" secondItem="SIO-y4-hSZ" secondAttribute="top" id="ncF-kT-Vrc"/>
+                                    <constraint firstItem="Hp8-4m-aOK" firstAttribute="leading" secondItem="SIO-y4-hSZ" secondAttribute="leading" id="qNR-p7-5dn"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -288,16 +288,17 @@
                             <constraint firstItem="cdh-nU-gwh" firstAttribute="leading" secondItem="Kyi-Is-GcF" secondAttribute="leading" id="4cV-LS-1jk"/>
                             <constraint firstItem="SyG-Mz-914" firstAttribute="leading" secondItem="Kyi-Is-GcF" secondAttribute="leading" constant="15" id="6lw-2e-nbs"/>
                             <constraint firstItem="cdh-nU-gwh" firstAttribute="top" secondItem="Kyi-Is-GcF" secondAttribute="top" id="ESx-pX-yjU"/>
-                            <constraint firstItem="SIO-y4-hSZ" firstAttribute="leading" secondItem="Kyi-Is-GcF" secondAttribute="leading" constant="15" id="Hen-QN-fFx"/>
                             <constraint firstItem="BTH-2A-kVJ" firstAttribute="trailing" secondItem="Kyi-Is-GcF" secondAttribute="trailing" id="Ifn-DZ-YTE"/>
-                            <constraint firstItem="SIO-y4-hSZ" firstAttribute="top" secondItem="SyG-Mz-914" secondAttribute="bottom" constant="8" id="JaY-gr-2rD"/>
                             <constraint firstItem="UNK-el-hGc" firstAttribute="centerX" secondItem="cdh-nU-gwh" secondAttribute="centerX" id="SWM-D5-QN6"/>
                             <constraint firstItem="UNK-el-hGc" firstAttribute="top" secondItem="BTH-2A-kVJ" secondAttribute="bottom" constant="45" id="UwZ-OP-fRk"/>
+                            <constraint firstItem="Kyi-Is-GcF" firstAttribute="trailing" secondItem="SIO-y4-hSZ" secondAttribute="trailing" constant="15" id="Vb0-Au-dzo"/>
                             <constraint firstItem="Kyi-Is-GcF" firstAttribute="bottom" secondItem="cdh-nU-gwh" secondAttribute="bottom" id="ZrC-ZV-gnG"/>
-                            <constraint firstItem="Kyi-Is-GcF" firstAttribute="trailing" secondItem="SIO-y4-hSZ" secondAttribute="trailing" constant="15" id="but-oL-SnU"/>
+                            <constraint firstItem="SIO-y4-hSZ" firstAttribute="leading" secondItem="Kyi-Is-GcF" secondAttribute="leading" constant="15" id="az4-UF-NtG"/>
                             <constraint firstItem="BTH-2A-kVJ" firstAttribute="top" secondItem="Kyi-Is-GcF" secondAttribute="top" id="ciB-QK-ctx"/>
+                            <constraint firstItem="SIO-y4-hSZ" firstAttribute="top" secondItem="SyG-Mz-914" secondAttribute="bottom" constant="8" id="h8t-dL-lSG"/>
                             <constraint firstItem="Kyi-Is-GcF" firstAttribute="bottom" secondItem="cdh-nU-gwh" secondAttribute="bottom" id="opi-de-XCY"/>
                             <constraint firstItem="SyG-Mz-914" firstAttribute="top" secondItem="UNK-el-hGc" secondAttribute="bottom" constant="15" id="t2Z-Pg-bq5"/>
+                            <constraint firstItem="Kyi-Is-GcF" firstAttribute="bottom" secondItem="SIO-y4-hSZ" secondAttribute="bottom" constant="8" id="vos-EA-n10"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Kyi-Is-GcF"/>
                     </view>
@@ -710,6 +711,7 @@
                                                 <constraint firstItem="qTe-sU-1jr" firstAttribute="top" secondItem="025-dG-eMm" secondAttribute="top" constant="10" id="xzt-N5-O6V"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
                                             <outlet property="displayNameLbl" destination="jIe-Zt-18B" id="Vry-Ds-0Uj"/>
                                             <outlet property="imgView" destination="qTe-sU-1jr" id="0N6-Bq-zWe"/>
@@ -767,7 +769,7 @@
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JFs-RB-2Di">
                                             <rect key="frame" x="112.5" y="8" width="150" height="150"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hJv-RK-Vh1">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="anon_default" translatesAutoresizingMaskIntoConstraints="NO" id="hJv-RK-Vh1">
                                                     <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                                 </imageView>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="esQ-2f-wp3">
@@ -839,6 +841,7 @@
                                                 <constraint firstItem="Ovc-Ec-uNF" firstAttribute="centerY" secondItem="Ycr-QJ-Kn3" secondAttribute="centerY" id="XYD-Gp-yMS"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="color" keyPath="backgroundColor">
                                                 <color key="value" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -869,6 +872,7 @@
                                                 <constraint firstItem="Za7-jj-lO1" firstAttribute="centerY" secondItem="bRQ-0X-NLf" secondAttribute="centerY" id="sDW-zv-Xcd"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="color" keyPath="backgroundColor">
                                                 <color key="value" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -907,6 +911,7 @@
                         <viewLayoutGuide key="safeArea" id="Isd-Gw-d76"/>
                     </view>
                     <connections>
+                        <outlet property="imgUiView" destination="JFs-RB-2Di" id="wf2-Uz-C61"/>
                         <outlet property="profilePicImgView" destination="hJv-RK-Vh1" id="esC-gX-rin"/>
                         <outlet property="tblView" destination="Mf1-1y-oNJ" id="QOo-fN-c9p"/>
                     </connections>
@@ -1061,16 +1066,31 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NcP-0k-TBH" customClass="GMSMapView">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bcr-Lp-hvP">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <items>
+                                    <navigationItem title="Users" id="Aes-Qo-jyU">
+                                        <barButtonItem key="leftBarButtonItem" title="Back" id="hag-sN-i7k">
+                                            <connections>
+                                                <action selector="backBarBtn:" destination="LKI-ST-Qfu" id="XEz-fm-N66"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="NcP-0k-TBH" firstAttribute="top" secondItem="hyU-5p-w2R" secondAttribute="top" id="6UU-Wu-gcR"/>
+                            <constraint firstItem="Bcr-Lp-hvP" firstAttribute="leading" secondItem="hyU-5p-w2R" secondAttribute="leading" id="EHJ-lC-Ji6"/>
                             <constraint firstItem="hyU-5p-w2R" firstAttribute="bottom" secondItem="NcP-0k-TBH" secondAttribute="bottom" id="OS6-8c-NGK"/>
+                            <constraint firstItem="Bcr-Lp-hvP" firstAttribute="trailing" secondItem="hyU-5p-w2R" secondAttribute="trailing" id="Y8O-sR-z8n"/>
                             <constraint firstItem="NcP-0k-TBH" firstAttribute="trailing" secondItem="hyU-5p-w2R" secondAttribute="trailing" id="a7J-eD-VNf"/>
                             <constraint firstItem="NcP-0k-TBH" firstAttribute="leading" secondItem="hyU-5p-w2R" secondAttribute="leading" id="iBd-F7-a9y"/>
+                            <constraint firstItem="Bcr-Lp-hvP" firstAttribute="top" secondItem="hyU-5p-w2R" secondAttribute="top" id="t9W-6Y-gQ8"/>
+                            <constraint firstItem="NcP-0k-TBH" firstAttribute="top" secondItem="Bcr-Lp-hvP" secondAttribute="bottom" id="xbi-iL-v7a"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="hyU-5p-w2R"/>
                     </view>
@@ -1085,7 +1105,6 @@
         <!--Home-->
         <scene sceneID="NHF-g4-4f8">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="mEa-l7-0tA" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Z28-ay-Dex" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Home" image="Tabbar_Home" selectedImage="Tabbar_Home_Selected" id="4SI-5w-hbs"/>
                     <toolbarItems/>
@@ -1098,6 +1117,7 @@
                         <segue destination="tQo-gZ-t6E" kind="relationship" relationship="rootViewController" id="zc0-Xx-cIY"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mEa-l7-0tA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2278" y="1029"/>
         </scene>
@@ -1128,6 +1148,7 @@
         <image name="Tabbar_Clients_Selected" width="30" height="30"/>
         <image name="Tabbar_Home" width="30" height="30"/>
         <image name="Tabbar_Home_Selected" width="30" height="30"/>
+        <image name="anon_default" width="52" height="53"/>
         <image name="chat" width="25" height="25"/>
         <image name="chat_click" width="25" height="25"/>
         <image name="city" width="1080" height="1920"/>
